# hikari-gitbot

./: Dockerfile  README.md  compose.yaml  noxfile.py  pyproject.toml  sqlc.yaml
.github/workflows/: ci.yaml  publish.yaml
src/: __init__.py  __main__.py
src/db/: models.py  query.py
